--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 /public/assets
 .byebug_history
 
+#ignore test.rb
+test.rb
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 sendgrid.env
